--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jest": "^24.8.0",
     "jest-junit-reporter": "^1.1.0",
     "lint-staged": "^9.0.2",
-    "nodemon": "^1.19.1",
+    "nodemon": "^2.0.4",
     "prettier": "^1.19.1",
     "statsd-logger": "^1.0.1",
     "supertest": "^4.0.2",
@@ -29,11 +29,19 @@
     "winston": "^3.3.3"
   },
   "scripts": {
-    "dev": "ts-node src/app.ts",
-    "watch": "ts-node src/app.ts",
-    "start": "ts-node dist/app.js",
-    "build": "tsc -p ."
+    "dev": "NODE_ENV=development nodemon --watch '**/**/*' -e ts,tsx --exec ts-node ./src/app.ts",
+    "start": "docker-compose up",
+    "start:local": "ts-node dist/src/app.js",
+    "build": "docker-compose build",
+    "build:local": "tsc -p ."
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "lint-staged": {
+    "./**/*.ts": [
+      "yarn format",
+      "yarn lint",
+      "git add"
+    ]
+  }
 }
