--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
@@ -25,14 +26,14 @@
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.7.2",
-    "winston": "^3.3.3"
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "dev": "NODE_ENV=development nodemon --watch '**/**/*' -e ts,tsx --exec ts-node ./src/app.ts",
     "start": "docker-compose up",
-    "start:local": "ts-node dist/src/app.js",
-    "build": "docker-compose build",
+    "start:build": "tsc -p . && docker-compose up --build",
+    "start:local": "ts-node ./src/app.ts",
+    "build": "tsc -p . && docker-compose build",
     "build:local": "tsc -p ."
   },
   "author": "",
